# ouija

./: .gitignore  CMakeLists.txt  README.md
example_boards/: example.kanban
src/: CMakeLists.txt  board.cpp  board.h  main.cpp  ops.cpp  ops.h
